Revision history for Perl extension Archive-Builder

1.15 Wed Feb 23 2011
	- Updating to Module::Install::DSL 1.00
	- Removing Test::ClassAPI test to reduce dependencies

1.14 Thu  3 Jul 2008
	- No functional changes.
	- Updating to Module::Install 0.76.
	- Fixing CPANTS complaint about broken META.yml.

1.13 Mon 22 Oct 2007
	- No functional changes.
	- Incremental release to get a newer set of AUTOMATED_TESTING tests

1.12 Fri  3 Aug 2007
	- Fixing a small bug in archive file generation (Jeffery Candiloro)

1.11 Tue  8 May 2007
	- Adding a test to verify the file sorted works implemented
	  in the previous version works as expected.
	- No functional changes.

1.10 Fri  4 May 2007
	- Due to the fixing of some fairly major issues that caused
	  compatibility issues, it is STRONGLY recommended that this release
	  be used as the the mimumum dependency for code using this module.
	- Paths are unix paths, use File::Spec::Unix when working with them
	- Archive::Builder installs on Win32 now.
	- Archives are always built with the files in sorted order,
	  so that Archive::Extract won't get confused about the extract_path

1.08 Tue 20 Feb 2007
	- Improve error message on content generation failure

1.07 Tue 15 Feb 2007
	- Upgrading to Module::Install 0.64
	- Upgraded from IO::Scalar to IO::String
	- Bumping dependencies to counter various problems
	- Fix test 06_archives.t so it won't fail due to missing dependencies (Gabor Szabo)

1.06 Fri 21 Apr 2006
	- No functional changes
	- Removed the use of UNIVERSAL::isa and UNIVERSAL::can
	- Moved from old CVS to new SVN repository
	- Ported installer to use Module::Install 0.62

1.05 Tue Feb 15 2005
	- Removing braindead pass-through Build.PL file

1.04 Thu Oct  7 2004
	- Added Archive::Builder::files object method

1.03 Sun Sep  5 2004
	- Fixed dependencies to force upgrade of modules needed for tests
	  to pass.

1.02 Sun Sep  5 2004
	- Added the Archive::Builder::new_sections instance method