@@ -3,6 +3,7 @@ Revision history for Perl extension Archive-Builder
 1.15 Wed Feb 23 2011
 	- Updating to Module::Install::DSL 1.00
 	- Removing Test::ClassAPI test to reduce dependencies
+	- Call ->clear after Archive::Tar->write to free memory
 
 1.14 Thu  3 Jul 2008
 	- No functional changes.
